--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bootstrap": "^5.3.3",
     "e-shopping-front-end": "file:",
     "express": "^4.18.2",
-    "ngx-cookie-service": "^19.0.0",
+    "jwt-decode": "^4.0.0",
+    "ngx-cookie-service": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
